Fixing forced dark mode in CSS

--- a/src/css/dark.scss
+++ b/src/css/dark.scss
@@ -151,11 +151,3 @@
 
     @include dark();
 }
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        @include root();
-    }
-
-    @include dark();
-}
